<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mouse</name>
  <version>1.0.0</version>
  <description>The mouse package</description>
  <maintainer email="cmower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ros-mouse</url>
  <author email="cmower@ed.ac.uk">Christopher E. Mower</author>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>python-pygame</depend>
</package>
